<resources>
    <string name="app_name">Tint</string>
    <string name="action_add">Adicionar</string>
    <string name="title_activity_criar_paleta">Nova Paleta</string>
    <string name="title_activity_adicionar_cor">AdicionarCorActivity</string>
    <string name="title_activity_mostrar_paleta">MostrarPaletaActivity</string>
    <string name="sobre_paletas">\tUma <b>paleta</b> é um conjunto de cores usados para compor um
        sistema de coloração seja para uma aplicação ou uma página web.</string>
    <string name="sobre_cores">\tA <b>cor</b> é uma <em>percepção visual</em> provocada pela ação de
        um feixe de fótons sobre células especializadas da retina, que transmitem através de
        informação pré-processada ao nervo óptico, impressões para o sistema nervoso.</string>
    <string name="title_activity_cor">CorActivity</string>
    <string name="hex_vs_rgb">\t<b>RGB</b> e <b>HEX</b> são duas formas de representar cores em
        sistemas de computação. Tanto o HEX quanto o RGB retornam os mesmos resultados de cor.
        A diferença é que, dependendo do dispositivo ou software que você está utilizando, um ou
        outro sistema numérico de cor pode estar ausente.\n\n\tO <b>RGB</b> é formado por uma tupla
        de três inteiros que variam de 0 a 255, definindo a intesidade correspondente as cores
        vermelha (r), verde (g) e azul (b) respectivamente.\n\n\tEnquanto, o <b>HEX</b> é uma
        tripleta hexadecimal formada por 3 bytes. Cada byte varia de 00h a FFh, que em notação
        decimal é equivalente a variação de 0 a 255.\n\n\tAssim notamos que tanto RGB, quanto HEX
        são apenas dois sistemas númericos distintos para representar a mesma informação.</string>
    <string name="hex_para_rgb">\tA conversão de uma hexadecimal para escala rgb é bastante simples,
        uma vez que, o código hexadecimal tem o seguinte formato #RRGGBB.\n\n\tEntão, basta ignorarmos
        o "#" e pegar os próximos pares de caracteres, onde cada par irá representar uma variável
        de cor R, G e B, respectivamente.\n\n\tPeguemos como exemplo a cor abaixo:</string>
    <string name="hex_para_rgb_r">DD\n\ncorrespondente a <b>221</b> em decimal</string>
    <string name="hex_para_rgb_g">4B\n\ncorrespondente a <b>75</b> em decimal</string>
    <string name="hex_para_rgb_b">39\n\ncorrespondente a <b>57</b> em decimal</string>
    <string name="rgb_para_hex">\tA conversão de uma cor na escala RGB para hexadecimal é bastante
        simples, basta pegar as variáveis R, G e B, então converter cada uma delas para hexadecimal
        e uni-las em uma mesma cadeia de caracteres.\n\n\tTomando como exemplo a cor abaixo:</string>
    <string name="rgb_para_hex_1">128\n\ncorrespondente a <b>80</b> em hexadecimal</string>
    <string name="rgb_para_hex_2">234\n\ncorrespondente a <b>EA</b> em hexadecimal</string>
    <string name="rgb_para_hex_3">75\n\ncorrespondente a <b>4B</b> em hexadecimal</string>
</resources>
