<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.evertton.tint.HexToRgbActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="HEX para RGB"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="22dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/hex_para_rgb" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="128dp"
                    android:layout_height="32dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:background="#DD4B39"
                    android:padding="8dp"
                    android:text="#DD4B39"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="R"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/hex_para_rgb_r"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="G"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/hex_para_rgb_g"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="B"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/hex_para_rgb_b"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_marginTop="16dp"
                android:text="\tResultando na representação abaixo para a escala RGB:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="128dp"
                    android:layout_height="36dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:background="#DD4B39"
                    android:padding="8dp"
                    android:text="rgb( 221, 75, 39 )"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
